# summy

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  avl.c  c++_eclipse_formatting.xml  cvc4.supp  test.c  todo
exec/: Makefile  main.cpp
exec/all_f/: .gitignore  CMakeLists.txt  Makefile  main.c
exec/all_f/src/: main.cpp
exec/demo/: Makefile
exec/demo/src/: main.cpp
exec/demo_dstack/: .gitignore  CMakeLists.txt  Makefile  Makefile_test  _test_readhex2.c  a.out  switch_test1.c  test.as  test1.as  test10.as  test11.as  test12.as  test13.as  test15.as  test16.as  test17.as  test18.as  test19.as  test2.as  test20.as  test21.as  test22.as  test23-loop.as  test23-loop.c  test23.as  test23a.as  test3.as  test4.as  test5b.as  test6b.as  test8.as  test_2a1a.as  test_2a1a_reg.as  test_2a2a_reg2.as  test_2a_2.as  test_2a_offset.as  test_FieldSplitMiddle.as  test_eq_aliases.as  test_functions.c  test_ite1.as  (+20 more)
exec/demo_dstack/src/: foo.ccm  main.cpp  mod.ccm
exec/demo_ismt/: Makefile
exec/demo_ismt/src/: main.cpp
exec/src/: main.cpp
exec/src/test/: asm_compile.cpp
exec/tester/: CMakeLists.txt  Makefile
exec/tester/include/summy/test/: compile.h
exec/tester/include/summy/test/analysis/domains/: common.h  numeric_api_builder.h
exec/tester/include/summy/test/rreil/: rreil_builder.h
exec/tester/src/: tester.cpp
exec/tester/src/test/: compile.cpp  value_set.cpp
exec/tester/src/test/analysis/domains/: common.cpp  dstack.cpp  summary_dstack.cpp  summary_dstack_complex_noerror.cpp
exec/tester/src/test/analysis/domains/numeric/: numeric_api_builder.cpp  vsd_state.cpp
exec/tester/src/test/analysis/ismt/: ismt.cpp
exec/tester/src/test/rreil/: rreil_builder.cpp
include/summy/: sliced_memory.h  statistics.h
include/summy/analysis/: analysis.h  analysis_result.h  analysis_visitor.h  domain_state.h  fixpoint.h  fp_analysis.h  fp_priority_queue.h  global_analysis.h  inverse_set_map.h  lattice_elem.h  set_elem.h  static_memory.h  subset_man.h  util.h
include/summy/big_step/: analysis_dectran.h  big_step.h  dectran.h  fcollect_dectran.h  ssa.h  sweep.h
include/summy/binary/: binary_provider.h  direct_provider.h  elf_provider.h  file_provider.h  stream_provider.h
include/summy/cfg/: address_node.h  bfs_iterator.h  cfg.h  edge.h  edge_copy_visitor.h  edge_visitor.h  jd_manager.h  node.h  node_copy_visitor.h  node_visitor.h  observer.h  phi_edge.h  start_node.h
include/summy/rreil/: copy_visitor.h  shared_copy.h  visitor.h
include/summy/tools/: rreil_evaluator.h  rreil_util.h
include/summy/transformers/: decomposer.h  goto_ip_adder.h  ip_propagator.h  resolved_connector.h  transformer.h  trivial_connector.h
include/summy/value_set/: value_set.h  value_set_visitor.h  vs_compare.h  vs_finite.h  vs_open.h  vs_top.h
src/: main.cpp  sliced_memory.cpp  statistics.cpp
src/analysis/: analysis.cpp  analysis_visitor.cpp  domain_state.cpp  fixpoint.cpp  fp_analysis.cpp  fp_priority_queue.cpp  global_analysis.cpp  static_memory.cpp  util.cpp
src/analysis/adaptive_rd/: adaptive_rd.cpp  adaptive_rd_elem.cpp  adaptive_rd_state.cpp
src/analysis/addr/: addr.cpp  addr_state.cpp
src/analysis/addr_machine/: addr_machine.cpp  addr_machine_state.cpp
src/analysis/bfs_order/: bfs_order.cpp
src/analysis/caller/: caller.cpp  caller_state.cpp
src/analysis/domains/: cr_merge_region_iterator.cpp  dstack.cpp  herbrand_answer.cpp  memory_state.cpp  mempath.cpp  mempath_assignment.cpp  memstate_util.cpp  merge_region_iterator.cpp  ptr_set.cpp  sms_compat.cpp  sms_op.cpp  summary_application.cpp  summary_dstack.cpp  summary_dstack_stubs.cpp  summary_memory_state.cpp  util.cpp
src/analysis/fcollect/: fcollect.cpp
src/analysis/global_analysis/: global_analysis.cpp  global_state.cpp
src/analysis/ismt/: cvc_context.cpp  ismt.cpp  smt_builder.cpp  smt_def_builder.cpp  smt_value_builder.cpp
src/analysis/liveness/: liveness.cpp  lv_elem.cpp  lv_state.cpp
src/analysis/reaching_defs/: lattice_elem.cpp  rd_elem.cpp  rd_state.cpp  (+1 more)
src/big_step/: analysis_dectran.cpp  big_step.cpp  dectran.cpp  fcollect_dectran.cpp  ssa.cpp  sweep.cpp
src/binary/: binary_provider.cpp  direct_provider.cpp  elf_provider.cpp  file_provider.cpp  stream_provider.cpp
src/cfg/: address_node.cpp  bfs_iterator.cpp  cfg.cpp  edge.cpp  edge_copy_visitor.cpp  jd_manager.cpp  node.cpp  node_copy_visitor.cpp  observer.cpp  phi_edge.cpp  start_node.cpp
src/rreil/: copy_visitor.cpp  shared_copy.cpp
src/tools/: rreil_evaluator.cpp  rreil_util.cpp
src/transformers/: decomposer.cpp  goto_ip_adder.cpp  ip_propagator.cpp  resolved_connector.cpp  trivial_connector.cpp
src/value_set/: value_set.cpp  value_set_visitor.cpp  vs_compare.cpp  vs_finite.cpp  vs_open.cpp  vs_top.cpp
test/: .gitignore  Makefile  example_a.c  example_a_ud.c  example_addb.c  example_b.c  example_d.c  example_f.c  example_g.c  example_h.c  example_i.c  example_partial_mem_undef.c  example_sa.c  example_sb.c  example_sc.c  example_shift_undef.c  example_simple.c  example_vtable2.cpp  test14.as  test15.as  test17.as  test2.c  test23-loop.as  test3.c  test3_mem.c  test4.c  test5.as  test_FieldSplitMiddle.as  test_call.as  test_cmemory.c  test_malloc.c  test_malloc_icall.c  test_nullptr.as  test_ufptr_5.c  test_ufptr_8.c  test_vcall_returnobjglob.cpp
test_programs/: .gitignore  Makefile  btree.cpp  example_field_fun.s  example_i.c  example_sb.c  example_sc.c  example_simple.c  test.c  test3.c  test4.as  test4.c  test9.as  test_2a2a_reg.as  test_appl1.c  test_ccomplex.c  test_functions_ref.c  test_multiple_deref.as  test_multiple_deref.c  test_structuralConflict2.as  test_ufptr_2.c  test_vcall_returnobjheap.cpp
tools/demo_dstack/: test.as  test18.as  test21.as  test6.as  test7.as  test_new.cpp  test_readhex.c  test_ufptr.c  test_ufptr_6.c
tools/demo_ismt/: .gitignore  Makefile
tools/driver/: CMakeLists.txt  Makefile  test_del_fields.c
tools/driver/src/: main.cpp
tools/sweep/: .gitignore  CMakeLists.txt  mappi.cpp
tools/sweep/src/: main.cpp
tools/tester/: .gitignore  Makefile
(+139 files in other folders)
